--- a/src/scss/WTChecker.scss
+++ b/src/scss/WTChecker.scss
@@ -17,5 +17,7 @@ span.its-fine-highlight {
     .ant-input-search-button {
         border-radius: 0 8px 8px 0 !important;
         height: 40px;
+        background-color: #f80097;
+        border: transparent;
     }
 }
