--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -20,6 +20,8 @@ span.its-fine-highlight {
 .wt-checker .ant-input-search-button {
   border-radius: 0 8px 8px 0 !important;
   height: 40px;
+  background-color: #f80097;
+  border: transparent;
 }
 
 h1,
