--- a/src/scss/WTChecker.scss
+++ b/src/scss/WTChecker.scss
@@ -1,5 +1,5 @@
 span.its-fine-highlight {
-    color: #f80097;
+    color: #f50289;
 }
 .wt-checker {
     width: 800px;
@@ -22,7 +22,7 @@ span.its-fine-highlight {
     .ant-input-search-button {
         border-radius: 0 8px 8px 0 !important;
         height: 40px;
-        background-color: #f80097;
+        background-color: #f50289;
         border: transparent;
     }
     .reward-img-container {
@@ -38,14 +38,20 @@ span.its-fine-highlight {
             display: flex;
             justify-content: space-between;
         }
-        .reward-img {
-            width: 252px;
-            height: 252px;
-            border-radius: 16px;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            box-shadow: (0px 4px 20px rgba(168, 168, 168, 0.25));
+        .result-wrapper {
+            .reward-img {
+                width: 252px;
+                height: 252px;
+                border-radius: 16px;
+                margin-bottom: 8px;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                box-shadow: (0px 4px 20px rgba(168, 168, 168, 0.25));
+            }
+            h4 {
+                font-weight: bolder;
+            }
         }
     }
 }
