--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -33,13 +33,14 @@ body {
         padding: 8px;
     }
     footer {
-        background-color: #f80097;
+        background-color: #f50289;
         width: 100%;
         position: absolute;
         bottom: 0;
         padding: 20px 40px;
+        border-top: 1px solid rgb(239, 239, 239);
         h3 {
-            color: white;
+            color: #fff;
             font-weight: bolder;
         }
     }
