--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 span.its-fine-highlight {
-  color: #f80097;
+  color: #f50289;
 }
 
 .wt-checker {
@@ -25,7 +25,7 @@ span.its-fine-highlight {
 .wt-checker .ant-input-search-button {
   border-radius: 0 8px 8px 0 !important;
   height: 40px;
-  background-color: #f80097;
+  background-color: #f50289;
   border: transparent;
 }
 .wt-checker .reward-img-container .reward2-container,
@@ -41,14 +41,18 @@ span.its-fine-highlight {
   display: flex;
   justify-content: space-between;
 }
-.wt-checker .reward-img-container .reward-img {
+.wt-checker .reward-img-container .result-wrapper .reward-img {
   width: 252px;
   height: 252px;
   border-radius: 16px;
+  margin-bottom: 8px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: 0px 4px 20px rgba(168, 168, 168, 0.25);
+}
+.wt-checker .reward-img-container .result-wrapper h4 {
+  font-weight: bolder;
 }
 
 h1,
@@ -87,14 +91,15 @@ body .ant-input {
   padding: 8px;
 }
 body footer {
-  background-color: #f80097;
+  background-color: #f50289;
   width: 100%;
   position: absolute;
   bottom: 0;
   padding: 20px 40px;
+  border-top: 1px solid rgb(239, 239, 239);
 }
 body footer h3 {
-  color: white;
+  color: #fff;
   font-weight: bolder;
 }
 
