--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -40,9 +40,9 @@ span.its-fine-highlight {
   height: 10px;
   border-radius: 50%;
   position: relative;
-  animation: loader07-u5pnknu 1s linear infinite;
+  animation: loader07-u5pnkpz 1s linear infinite;
 }
-@keyframes loader07-u5pnknu {
+@keyframes loader07-u5pnkpz {
   0% {
     box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.05), 12px -12px 0 0 rgba(245, 2, 137, 0.1), 17px 0 0 0 rgba(245, 2, 137, 0.2), 12px 12px 0 0 rgba(245, 2, 137, 0.3), 0 17px 0 0 rgba(245, 2, 137, 0.4), -12px 12px 0 0 rgba(245, 2, 137, 0.6), -17px 0 0 0 rgba(245, 2, 137, 0.8), -12px -12px 0 0 #f50289;
   }
@@ -70,6 +70,12 @@ span.its-fine-highlight {
   100% {
     box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.05), 12px -12px 0 0 rgba(245, 2, 137, 0.1), 17px 0 0 0 rgba(245, 2, 137, 0.2), 12px 12px 0 0 rgba(245, 2, 137, 0.3), 0 17px 0 0 rgba(245, 2, 137, 0.4), -12px 12px 0 0 rgba(245, 2, 137, 0.6), -17px 0 0 0 rgba(245, 2, 137, 0.8), -12px -12px 0 0 #f50289;
   }
+}
+.wt-checker .empty-banner {
+  box-sizing: border-box;
+  border-radius: 16px;
+  padding: 24px;
+  background-color: rgb(241, 241, 241);
 }
 .wt-checker .reward-img-container .reward2-container,
 .wt-checker .reward-img-container .reward1-container {
