getting started with responsive

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -22,7 +22,7 @@ body {
     font-family: "Poppins", sans-serif !important;
     margin: 0;
     .main-layout {
-        width: 1440px;
+        width: 100%;
         max-width: 1440px;
         margin: auto;
         position: relative;
