--- a/src/scss/WTChecker.scss
+++ b/src/scss/WTChecker.scss
@@ -3,7 +3,7 @@ span.its-fine-highlight {
     color: #f50289;
 }
 .wt-checker {
-    width: 800px;
+    width: 100%;
     max-width: 800px;
     margin: 0;
     position: absolute;
@@ -12,13 +12,15 @@ span.its-fine-highlight {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     text-align: center;
+    box-sizing: border-box;
+    padding: 16px;
     h1 {
         font-weight: bolder;
     }
     .wt-divider {
         margin: 24px auto;
-        min-width: 400px;
-        width: 400px;
+        min-width: 50%;
+        width: 50%;
     }
     .ant-input-search-button {
         border-radius: 0 8px 8px 0 !important;
@@ -43,21 +45,9 @@ span.its-fine-highlight {
         background-color: rgb(241, 241, 241);
     }
     .reward-img-container {
-        .reward2-container,
-        .reward1-container {
-            display: flex;
-            justify-content: center;
-            .reward-img {
-                margin: 0 11px;
-            }
-        }
-        .reward3-container {
-            display: flex;
-            justify-content: space-between;
-        }
         .result-wrapper {
             .reward-img {
-                width: 252px;
+                width: 100%;
                 height: 252px;
                 border-radius: 16px;
                 margin-bottom: 8px;
