--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,7 +4,7 @@ span.its-fine-highlight {
 }
 
 .wt-checker {
-  width: 800px;
+  width: 100%;
   max-width: 800px;
   margin: 0;
   position: absolute;
@@ -13,14 +13,16 @@ span.its-fine-highlight {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+  box-sizing: border-box;
+  padding: 16px;
 }
 .wt-checker h1 {
   font-weight: bolder;
 }
 .wt-checker .wt-divider {
   margin: 24px auto;
-  min-width: 400px;
-  width: 400px;
+  min-width: 50%;
+  width: 50%;
 }
 .wt-checker .ant-input-search-button {
   border-radius: 0 8px 8px 0 !important;
@@ -40,9 +42,9 @@ span.its-fine-highlight {
   height: 10px;
   border-radius: 50%;
   position: relative;
-  animation: loader07-u5pnkpz 1s linear infinite;
+  animation: loader07-u5pnlk5 1s linear infinite;
 }
-@keyframes loader07-u5pnkpz {
+@keyframes loader07-u5pnlk5 {
   0% {
     box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.05), 12px -12px 0 0 rgba(245, 2, 137, 0.1), 17px 0 0 0 rgba(245, 2, 137, 0.2), 12px 12px 0 0 rgba(245, 2, 137, 0.3), 0 17px 0 0 rgba(245, 2, 137, 0.4), -12px 12px 0 0 rgba(245, 2, 137, 0.6), -17px 0 0 0 rgba(245, 2, 137, 0.8), -12px -12px 0 0 #f50289;
   }
@@ -77,21 +79,8 @@ span.its-fine-highlight {
   padding: 24px;
   background-color: rgb(241, 241, 241);
 }
-.wt-checker .reward-img-container .reward2-container,
-.wt-checker .reward-img-container .reward1-container {
-  display: flex;
-  justify-content: center;
-}
-.wt-checker .reward-img-container .reward2-container .reward-img,
-.wt-checker .reward-img-container .reward1-container .reward-img {
-  margin: 0 11px;
-}
-.wt-checker .reward-img-container .reward3-container {
-  display: flex;
-  justify-content: space-between;
-}
 .wt-checker .reward-img-container .result-wrapper .reward-img {
-  width: 252px;
+  width: 100%;
   height: 252px;
   border-radius: 16px;
   margin-bottom: 8px;
@@ -129,7 +118,7 @@ body {
   margin: 0;
 }
 body .main-layout {
-  width: 1440px;
+  width: 100%;
   max-width: 1440px;
   margin: auto;
   position: relative;
