--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "./WTChecker.scss";
+@import "./responsive.scss";
 h1,
 h2,
 h3,
@@ -21,12 +22,13 @@ a {
 body {
     font-family: "Poppins", sans-serif !important;
     margin: 0;
+    height: 100%;
     .main-layout {
+        position: relative;
+        min-height: 100vh;
         width: 100%;
         max-width: 1440px;
         margin: auto;
-        position: relative;
-        height: 100vh;
     }
     .ant-input {
         border-radius: 8px;
