Able to render bonus reward

--- a/src/scss/WTChecker.scss
+++ b/src/scss/WTChecker.scss
@@ -55,6 +55,7 @@ span.its-fine-highlight {
                 box-shadow: (0px 4px 20px rgba(168, 168, 168, 0.25));
             }
             p {
+                font-size: 0.8rem;
                 font-weight: 600;
             }
         }
