Added info page for looking combination atks

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "./WTChecker.scss";
+@import "./info.scss";
 @import "./responsive.scss";
 h1,
 h2,
@@ -28,13 +29,20 @@ body {
         justify-content: center;
         align-items: center;
         box-sizing: border-box;
-        height: calc(100vh - 140px);
     }
     .ant-layout {
         background: #fff;
         .ant-layout-header {
             display: flex;
             align-items: center;
+            justify-content: space-between;
+            ul {
+                margin-bottom: 0;
+                a {
+                    font-weight: bolder;
+                    color: #f50289;
+                }
+            }
             .logo {
                 width: 40px;
                 height: 40px;
@@ -45,9 +53,9 @@ body {
             background: transparent;
         }
         .ant-layout-footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
+            // position: absolute;
+            // bottom: 0;
+            // width: 100%;
             background: #f50289;
             h3 {
                 color: #fff;
