--- a/src/scss/WTChecker.scss
+++ b/src/scss/WTChecker.scss
@@ -9,8 +9,10 @@ span.its-fine-highlight {
     display: flex;
     flex-flow: column;
     text-align: center;
+    justify-content: center;
     box-sizing: border-box;
-    padding: 16px 16px 40px 16px;
+    min-height: 100vh;
+    padding: 16px;
     h1 {
         font-weight: bolder;
         margin-bottom: 16px !important;
@@ -48,7 +50,7 @@ span.its-fine-highlight {
                 width: 100%;
                 height: 252px;
                 border-radius: 16px;
-                margin-bottom: 8px;
+                margin-bottom: 16px;
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
