--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -42,9 +42,9 @@ span.its-fine-highlight {
   height: 10px;
   border-radius: 50%;
   position: relative;
-  animation: loader07-u5pnqf7 1s linear infinite;
+  animation: loader07-u5pnqk4 1s linear infinite;
 }
-@keyframes loader07-u5pnqf7 {
+@keyframes loader07-u5pnqk4 {
   0% {
     box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.05), 12px -12px 0 0 rgba(245, 2, 137, 0.1), 17px 0 0 0 rgba(245, 2, 137, 0.2), 12px 12px 0 0 rgba(245, 2, 137, 0.3), 0 17px 0 0 rgba(245, 2, 137, 0.4), -12px 12px 0 0 rgba(245, 2, 137, 0.6), -17px 0 0 0 rgba(245, 2, 137, 0.8), -12px -12px 0 0 #f50289;
   }
@@ -135,6 +135,10 @@ span.its-fine-highlight {
   background-size: cover;
   box-shadow: 0px 4px 20px rgba(168, 168, 168, 0.25);
   height: 160px;
+}
+
+.hold-container {
+  height: 100vh;
 }
 
 @media screen and (max-width: 720px) {
@@ -254,6 +258,7 @@ body .ant-layout .ant-layout-header ul {
   margin-bottom: 0;
 }
 body .ant-layout .ant-layout-header ul a {
+  margin: 0 16px !important;
   font-weight: bolder;
   color: #f50289;
 }
