--- a/src/scss/hold.scss
+++ b/src/scss/hold.scss
@@ -1,5 +1,11 @@
 .hold-container {
     max-width: 960px;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    .ant-image {
+        img {
+            border-radius: 8px;
+        }
+        margin-right: 8px;
+    }
 }
