--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -42,9 +42,9 @@ span.its-fine-highlight {
   height: 10px;
   border-radius: 50%;
   position: relative;
-  animation: loader07-u5pnql1 1s linear infinite;
+  animation: loader07-u5pnqt9 1s linear infinite;
 }
-@keyframes loader07-u5pnql1 {
+@keyframes loader07-u5pnqt9 {
   0% {
     box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.05), 12px -12px 0 0 rgba(245, 2, 137, 0.1), 17px 0 0 0 rgba(245, 2, 137, 0.2), 12px 12px 0 0 rgba(245, 2, 137, 0.3), 0 17px 0 0 rgba(245, 2, 137, 0.4), -12px 12px 0 0 rgba(245, 2, 137, 0.6), -17px 0 0 0 rgba(245, 2, 137, 0.8), -12px -12px 0 0 #f50289;
   }
@@ -140,7 +140,13 @@ span.its-fine-highlight {
 .hold-container {
   max-width: 960px;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+}
+.hold-container .ant-image {
+  margin-right: 8px;
+}
+.hold-container .ant-image img {
+  border-radius: 8px;
 }
 
 @media screen and (max-width: 720px) {
