Able to sort both alphabetically and token length

--- a/src/scss/hold.scss
+++ b/src/scss/hold.scss
@@ -2,6 +2,14 @@
     max-width: 960px;
     width: 100%;
     min-height: 100vh;
+    .loader-wrapper {
+        display: flex;
+        align-items: center;
+        height: 100vh;
+    }
+    .table-wrapper {
+        margin-top: 80px;
+    }
     .ant-image {
         img {
             border-radius: 8px;
