--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -30,49 +30,6 @@ span.its-fine-highlight {
   background-color: #f50289;
   border: transparent;
 }
-.wt-checker .loading {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  height: 80px;
-  align-items: center;
-}
-.wt-checker .loading .loader {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  position: relative;
-  animation: loader07-u5pnqt9 1s linear infinite;
-}
-@keyframes loader07-u5pnqt9 {
-  0% {
-    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.05), 12px -12px 0 0 rgba(245, 2, 137, 0.1), 17px 0 0 0 rgba(245, 2, 137, 0.2), 12px 12px 0 0 rgba(245, 2, 137, 0.3), 0 17px 0 0 rgba(245, 2, 137, 0.4), -12px 12px 0 0 rgba(245, 2, 137, 0.6), -17px 0 0 0 rgba(245, 2, 137, 0.8), -12px -12px 0 0 #f50289;
-  }
-  12.5% {
-    box-shadow: 0 -17px 0 0 #f50289, 12px -12px 0 0 rgba(245, 2, 137, 0.05), 17px 0 0 0 rgba(245, 2, 137, 0.1), 12px 12px 0 0 rgba(245, 2, 137, 0.2), 0 17px 0 0 rgba(245, 2, 137, 0.3), -12px 12px 0 0 rgba(245, 2, 137, 0.4), -17px 0 0 0 rgba(245, 2, 137, 0.6), -12px -12px 0 0 rgba(245, 2, 137, 0.8);
-  }
-  25% {
-    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.8), 12px -12px 0 0 #f50289, 17px 0 0 0 rgba(245, 2, 137, 0.05), 12px 12px 0 0 rgba(245, 2, 137, 0.1), 0 17px 0 0 rgba(245, 2, 137, 0.2), -12px 12px 0 0 rgba(245, 2, 137, 0.3), -17px 0 0 0 rgba(245, 2, 137, 0.4), -12px -12px 0 0 rgba(245, 2, 137, 0.6);
-  }
-  37.5% {
-    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.6), 12px -12px 0 0 rgba(245, 2, 137, 0.8), 17px 0 0 0 #f50289, 12px 12px 0 0 rgba(245, 2, 137, 0.05), 0 17px 0 0 rgba(245, 2, 137, 0.1), -12px 12px 0 0 rgba(245, 2, 137, 0.2), -17px 0 0 0 rgba(245, 2, 137, 0.3), -12px -12px 0 0 rgba(245, 2, 137, 0.4);
-  }
-  50% {
-    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.4), 12px -12px 0 0 rgba(245, 2, 137, 0.6), 17px 0 0 0 rgba(245, 2, 137, 0.8), 12px 12px 0 0 #f50289, 0 17px 0 0 rgba(245, 2, 137, 0.05), -12px 12px 0 0 rgba(245, 2, 137, 0.1), -17px 0 0 0 rgba(245, 2, 137, 0.2), -12px -12px 0 0 rgba(245, 2, 137, 0.3);
-  }
-  62.5% {
-    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.3), 12px -12px 0 0 rgba(245, 2, 137, 0.4), 17px 0 0 0 rgba(245, 2, 137, 0.6), 12px 12px 0 0 rgba(245, 2, 137, 0.8), 0 17px 0 0 #f50289, -12px 12px 0 0 rgba(245, 2, 137, 0.05), -17px 0 0 0 rgba(245, 2, 137, 0.1), -12px -12px 0 0 rgba(245, 2, 137, 0.2);
-  }
-  75% {
-    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.2), 12px -12px 0 0 rgba(245, 2, 137, 0.3), 17px 0 0 0 rgba(245, 2, 137, 0.4), 12px 12px 0 0 rgba(245, 2, 137, 0.6), 0 17px 0 0 rgba(245, 2, 137, 0.8), -12px 12px 0 0 #f50289, -17px 0 0 0 rgba(245, 2, 137, 0.05), -12px -12px 0 0 rgba(245, 2, 137, 0.1);
-  }
-  87.5% {
-    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.1), 12px -12px 0 0 rgba(245, 2, 137, 0.2), 17px 0 0 0 rgba(245, 2, 137, 0.3), 12px 12px 0 0 rgba(245, 2, 137, 0.4), 0 17px 0 0 rgba(245, 2, 137, 0.6), -12px 12px 0 0 rgba(245, 2, 137, 0.8), -17px 0 0 0 #f50289, -12px -12px 0 0 rgba(245, 2, 137, 0.05);
-  }
-  100% {
-    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.05), 12px -12px 0 0 rgba(245, 2, 137, 0.1), 17px 0 0 0 rgba(245, 2, 137, 0.2), 12px 12px 0 0 rgba(245, 2, 137, 0.3), 0 17px 0 0 rgba(245, 2, 137, 0.4), -12px 12px 0 0 rgba(245, 2, 137, 0.6), -17px 0 0 0 rgba(245, 2, 137, 0.8), -12px -12px 0 0 #f50289;
-  }
-}
 .wt-checker .empty-banner {
   box-sizing: border-box;
   border-radius: 16px;
@@ -141,6 +98,14 @@ span.its-fine-highlight {
   max-width: 960px;
   width: 100%;
   min-height: 100vh;
+}
+.hold-container .loader-wrapper {
+  display: flex;
+  align-items: center;
+  height: 100vh;
+}
+.hold-container .table-wrapper {
+  margin-top: 80px;
 }
 .hold-container .ant-image {
   margin-right: 8px;
@@ -253,6 +218,14 @@ body .main-layout {
   align-items: center;
   box-sizing: border-box;
 }
+body table {
+  border: 1px solid #f9f9f9;
+}
+body table td p {
+  text-overflow: ellipsis !important;
+  overflow: hidden !important;
+  white-space: nowrap !important;
+}
 body .ant-layout {
   background: #fff;
 }
@@ -276,6 +249,49 @@ body .ant-layout .ant-layout-header .logo {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+body .ant-layout .loading {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 80px;
+  align-items: center;
+}
+body .ant-layout .loading .loader {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  position: relative;
+  animation: loader07-u5pnr1f 1s linear infinite;
+}
+@keyframes loader07-u5pnr1f {
+  0% {
+    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.05), 12px -12px 0 0 rgba(245, 2, 137, 0.1), 17px 0 0 0 rgba(245, 2, 137, 0.2), 12px 12px 0 0 rgba(245, 2, 137, 0.3), 0 17px 0 0 rgba(245, 2, 137, 0.4), -12px 12px 0 0 rgba(245, 2, 137, 0.6), -17px 0 0 0 rgba(245, 2, 137, 0.8), -12px -12px 0 0 #f50289;
+  }
+  12.5% {
+    box-shadow: 0 -17px 0 0 #f50289, 12px -12px 0 0 rgba(245, 2, 137, 0.05), 17px 0 0 0 rgba(245, 2, 137, 0.1), 12px 12px 0 0 rgba(245, 2, 137, 0.2), 0 17px 0 0 rgba(245, 2, 137, 0.3), -12px 12px 0 0 rgba(245, 2, 137, 0.4), -17px 0 0 0 rgba(245, 2, 137, 0.6), -12px -12px 0 0 rgba(245, 2, 137, 0.8);
+  }
+  25% {
+    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.8), 12px -12px 0 0 #f50289, 17px 0 0 0 rgba(245, 2, 137, 0.05), 12px 12px 0 0 rgba(245, 2, 137, 0.1), 0 17px 0 0 rgba(245, 2, 137, 0.2), -12px 12px 0 0 rgba(245, 2, 137, 0.3), -17px 0 0 0 rgba(245, 2, 137, 0.4), -12px -12px 0 0 rgba(245, 2, 137, 0.6);
+  }
+  37.5% {
+    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.6), 12px -12px 0 0 rgba(245, 2, 137, 0.8), 17px 0 0 0 #f50289, 12px 12px 0 0 rgba(245, 2, 137, 0.05), 0 17px 0 0 rgba(245, 2, 137, 0.1), -12px 12px 0 0 rgba(245, 2, 137, 0.2), -17px 0 0 0 rgba(245, 2, 137, 0.3), -12px -12px 0 0 rgba(245, 2, 137, 0.4);
+  }
+  50% {
+    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.4), 12px -12px 0 0 rgba(245, 2, 137, 0.6), 17px 0 0 0 rgba(245, 2, 137, 0.8), 12px 12px 0 0 #f50289, 0 17px 0 0 rgba(245, 2, 137, 0.05), -12px 12px 0 0 rgba(245, 2, 137, 0.1), -17px 0 0 0 rgba(245, 2, 137, 0.2), -12px -12px 0 0 rgba(245, 2, 137, 0.3);
+  }
+  62.5% {
+    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.3), 12px -12px 0 0 rgba(245, 2, 137, 0.4), 17px 0 0 0 rgba(245, 2, 137, 0.6), 12px 12px 0 0 rgba(245, 2, 137, 0.8), 0 17px 0 0 #f50289, -12px 12px 0 0 rgba(245, 2, 137, 0.05), -17px 0 0 0 rgba(245, 2, 137, 0.1), -12px -12px 0 0 rgba(245, 2, 137, 0.2);
+  }
+  75% {
+    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.2), 12px -12px 0 0 rgba(245, 2, 137, 0.3), 17px 0 0 0 rgba(245, 2, 137, 0.4), 12px 12px 0 0 rgba(245, 2, 137, 0.6), 0 17px 0 0 rgba(245, 2, 137, 0.8), -12px 12px 0 0 #f50289, -17px 0 0 0 rgba(245, 2, 137, 0.05), -12px -12px 0 0 rgba(245, 2, 137, 0.1);
+  }
+  87.5% {
+    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.1), 12px -12px 0 0 rgba(245, 2, 137, 0.2), 17px 0 0 0 rgba(245, 2, 137, 0.3), 12px 12px 0 0 rgba(245, 2, 137, 0.4), 0 17px 0 0 rgba(245, 2, 137, 0.6), -12px 12px 0 0 rgba(245, 2, 137, 0.8), -17px 0 0 0 #f50289, -12px -12px 0 0 rgba(245, 2, 137, 0.05);
+  }
+  100% {
+    box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.05), 12px -12px 0 0 rgba(245, 2, 137, 0.1), 17px 0 0 0 rgba(245, 2, 137, 0.2), 12px 12px 0 0 rgba(245, 2, 137, 0.3), 0 17px 0 0 rgba(245, 2, 137, 0.4), -12px 12px 0 0 rgba(245, 2, 137, 0.6), -17px 0 0 0 rgba(245, 2, 137, 0.8), -12px -12px 0 0 #f50289;
+  }
 }
 body .ant-layout .ant-layout-footer {
   background: #f50289;
