--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -107,6 +107,14 @@ span.its-fine-highlight {
 .hold-container .table-wrapper {
   margin-top: 80px;
 }
+.hold-container .table-wrapper .search-table {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 16px;
+}
+.hold-container .table-wrapper .search-table input {
+  width: 400px;
+}
 .hold-container .ant-image {
   margin-right: 8px;
 }
@@ -262,9 +270,9 @@ body .ant-layout .loading .loader {
   height: 10px;
   border-radius: 50%;
   position: relative;
-  animation: loader07-u5pnr1f 1s linear infinite;
+  animation: loader07-u5pnr8d 1s linear infinite;
 }
-@keyframes loader07-u5pnr1f {
+@keyframes loader07-u5pnr8d {
   0% {
     box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.05), 12px -12px 0 0 rgba(245, 2, 137, 0.1), 17px 0 0 0 rgba(245, 2, 137, 0.2), 12px 12px 0 0 rgba(245, 2, 137, 0.3), 0 17px 0 0 rgba(245, 2, 137, 0.4), -12px 12px 0 0 rgba(245, 2, 137, 0.6), -17px 0 0 0 rgba(245, 2, 137, 0.8), -12px -12px 0 0 #f50289;
   }
