--- a/src/scss/hold.scss
+++ b/src/scss/hold.scss
@@ -11,8 +11,12 @@
         margin-top: 80px;
         .search-table {
             display: flex;
-            justify-content: flex-end;
+            justify-content: space-between;
             margin-bottom: 16px;
+            align-items: center;
+            h3 {
+                font-weight: bold;
+            }
             input {
                 width: 400px;
             }
