--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -274,15 +274,9 @@ body .ant-layout .loading .loader {
   height: 10px;
   border-radius: 50%;
   position: relative;
-<<<<<<< HEAD
-  animation: loader07-u5pnr2s 1s linear infinite;
+  animation: loader07-u5pnrac 1s linear infinite;
 }
-@keyframes loader07-u5pnr2s {
-=======
-  animation: loader07-u5pnr9o 1s linear infinite;
-}
-@keyframes loader07-u5pnr9o {
->>>>>>> dev
+@keyframes loader07-u5pnrac {
   0% {
     box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.05), 12px -12px 0 0 rgba(245, 2, 137, 0.1), 17px 0 0 0 rgba(245, 2, 137, 0.2), 12px 12px 0 0 rgba(245, 2, 137, 0.3), 0 17px 0 0 rgba(245, 2, 137, 0.4), -12px 12px 0 0 rgba(245, 2, 137, 0.6), -17px 0 0 0 rgba(245, 2, 137, 0.8), -12px -12px 0 0 #f50289;
   }
