--- a/src/scss/hold.scss
+++ b/src/scss/hold.scss
@@ -2,6 +2,7 @@
     max-width: 960px;
     width: 100%;
     min-height: 100vh;
+    padding: 24px;
     .loader-wrapper {
         display: flex;
         align-items: center;
