--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -127,6 +127,13 @@ span.its-fine-highlight {
   border-radius: 8px;
 }
 
+.kw-calendar {
+  box-sizing: border-box;
+  max-width: 1024px;
+  width: 100%;
+  padding: 24px;
+}
+
 @media screen and (max-width: 720px) {
   .info-container .reward-set .info-block .info-img {
     height: 120px;
@@ -252,6 +259,18 @@ body table td p {
   overflow: hidden !important;
   white-space: nowrap !important;
 }
+body ul {
+  padding-inline-start: 0;
+}
+body ul li {
+  list-style: none;
+}
+body ul li .ant-badge-status-text {
+  font-size: 12px;
+}
+body ul li .ant-badge-status-warning {
+  background-color: #f50289 !important;
+}
 body .ant-layout {
   background: #fff;
 }
@@ -288,9 +307,9 @@ body .ant-layout .loading .loader {
   height: 10px;
   border-radius: 50%;
   position: relative;
-  animation: loader07-ubgsxxd 1s linear infinite;
+  animation: loader07-ubgsyal 1s linear infinite;
 }
-@keyframes loader07-ubgsxxd {
+@keyframes loader07-ubgsyal {
   0% {
     box-shadow: 0 -17px 0 0 rgba(245, 2, 137, 0.05), 12px -12px 0 0 rgba(245, 2, 137, 0.1), 17px 0 0 0 rgba(245, 2, 137, 0.2), 12px 12px 0 0 rgba(245, 2, 137, 0.3), 0 17px 0 0 rgba(245, 2, 137, 0.4), -12px 12px 0 0 rgba(245, 2, 137, 0.6), -17px 0 0 0 rgba(245, 2, 137, 0.8), -12px -12px 0 0 #f50289;
   }
